# LaRuche_platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
data/migrations/: alembic.ini  env.py
data/seed/: portfolio_data.py  seed_portfolio.py
docs/: ai-act-model-register.json
docs/mentor/: Mermaid_app.txt  PLAN.md  mentor_saying.txt
eval/: model_defaults.json  pyproject.toml
eval/src/eval/: __init__.py
evals/: golden_dataset.json
frontend/: .env.production  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
helm/wealthmesh/: Chart.yaml  values.yaml
infra/keycloak/: realm-wealth.json
infra/postgres/: init.sql
infra/traefik/: dynamic.yml  traefik.yml
libs/agentkit/: pyproject.toml
libs/agentkit/src/agentkit/: __init__.py  guardrails.py  market.py  portfolio.py
libs/agentkit/src/agentkit/a2a/: __init__.py  client.py  models.py  router.py
libs/agentkit/src/agentkit/auth/: __init__.py  jwt.py
libs/agentkit/src/agentkit/finance/: __init__.py  metrics.py
libs/agentkit/src/agentkit/llm/: __init__.py  client.py
libs/agentkit/src/agentkit/mcp/: __init__.py  registry.py  tool.py
libs/agentkit/src/agentkit/tracing/: __init__.py  noop.py
libs/agentkit/tests/: test_a2a_models.py  test_a2a_router.py  test_auth_jwt.py  test_guardrails.py  test_llm_client.py  test_mcp.py  test_metrics.py  test_placeholder.py  test_tracing.py
libs/db/: pyproject.toml
libs/db/src/db/: __init__.py  models.py  session.py
libs/db/tests/: test_models.py
mobile/: App.tsx  package-lock.json  package.json
mobile/api/: client.ts
mobile/screens/: ChatScreen.tsx  DashboardScreen.tsx  MarketScreen.tsx  PortfolioScreen.tsx
scripts/: build-images.sh  demo.py  minikube-start.sh
(+78 files in other folders)
