[project]
name = "eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agentkit",
    "mlflow>=2.13",
    "langfuse>=2.0",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.uv.sources]
agentkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]
