[project]
name = "agentkit"
version = "0.1.0"
description = "Shared library: A2A protocol, MCP base, LLM client, tracing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.9",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "ollama>=0.3",
    "langfuse>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
